# mootboard

./: .gitignore  Dockerfile  README.md  image_to_video.py  main.py  pyproject.toml  requirements.txt  sketch-to-digital.py  sketch_v4.py
image_to_video/: __init__.py  agent.py
moodboard_agent/: __init__.py  agent.py
mootboard_engine/: main.py  multimodel_imagegen.py
my_agent/: agent.py
output/sketch-to-digital/: IMG_3286.HEIC
sketch_to_digital_agent/: __init__.py  agent.py
supervisor_agent/: agent.py
text_to_sketch_agent/: __init__.py  agent.py
